[project]
name = "walnut-cli"
version = "0.1.0"
description = "Walnut + Jupyter packaged as a Python client"
readme = "README.md"
authors = [
    { name = "Nicolas Ollinger", email = "nicolas.ollinger@univ-orleans.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.1.0",
    "jdk4py>=21.0.4.2",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "pydot>=3.0.4",
    "quarto-cli>=1.6.42",
    "walnut-kernel>=0.3.3",
]

[project.scripts]
walnut = "walnut_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


